--- a/style.css
+++ b/style.css
@@ -108,3 +108,119 @@ color: black; /* Visited link color */
 .bdr {
     outline: 3px solid #6C63FF;   /* Set border width */
 }
+
+
+/* Index Code */
+
+@keyframes slideLtoR {
+    0% {
+        transform: translateX(80%);
+    }
+
+    100% {
+        transform: translateX(0%);
+    }
+}
+
+.floating-image {
+    animation: slideLtoR 1s ease-in-out;
+}
+
+.btn.btn-outline-primary:hover {
+    position: relative;
+    border: 2px solid #007bff;
+    color: #161616;
+    background-color: transparent;
+    cursor: pointer;
+    transition: box-shadow 0.3s ease-in-out;
+  }
+  
+  /* Apply Glow Effect*/
+  .btn.btn.btn-outline-primary:hover {
+    box-shadow: 0 0 10px #6C63FF;
+  }
+  #btn {
+    display: none;
+  }
+/* 
+
+    /* Basic button styling */
+    /* .clickable-button { */
+        /* padding: 10px 20px; */
+        /* font-size: 16px; */
+        /* color: white; */
+        /* background-color: #007bff; Blue background */
+        /* border: none; */
+        /* border-radius: 5px; */
+        /* cursor: pointer; */
+        /* transition: background-color 0.3s, transform 0.2s; */
+    /* } */
+    
+    /* Hover effect */
+    /* .clickable-button:hover { */
+        /* background-color: #0056b3; Darker blue when hovering */
+        /* transform: scale(1.05); Slightly increase the size */
+    /* }  */
+    
+
+.btn.btn.btn-outline-primary:active {
+    background-color: white;
+    transform: scale(1.1); /* Reset size when clicked */
+}
+
+
+ /* Service Code */
+.try:active {
+    background-color: white;
+    transform: scale(1.1); /* Reset size when clicked */
+}
+
+@keyframes slideRtoL {
+    0% {
+        transform: translateX(-80%); /* Move from left */
+    }
+    
+    100% {
+        transform: translateX(0%); /* Move to the starting position */
+    }
+}
+/* About Code */
+.float {
+    position: relative;
+    animation: slideRtoL 1s ease-in-out;
+}
+
+/* Navbar Underline Animation */
+.navbar-nav .nav-link {
+    position: relative;
+}
+
+.navbar-nav .nav-link:hover {
+   
+    border-bottom: 2px solid black; /* Add black underline on hover */
+    transform: translateY(-4%);
+}
+
+/* Keyframe Animation */
+        @keyframes slideIn {
+            from {
+                opacity: 0;
+                transform: translateY(50px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        /* Apply Animation */
+        .popup {
+            opacity: 0;
+            animation: slideIn 0.7s ease-out forwards;
+        }
+
+        /* Hover Effect */
+        .hover-effect:hover {
+            transform: translateY(-3%);
+            transition: transform 0.15s ease-in-out;
+        }
